@@ -51,7 +51,7 @@
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
-      <version>2.1</version>
+      <version>2.9.3</version>
     </dependency>
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.apache.avro</groupId>
       <artifactId>avro</artifactId>
-      <version>1.7.4</version>
+      <version>1.7.5</version>
       <exclusions>
         <exclusion>
           <!-- Don't pull in Avro's (later) version of Jetty.-->
@@ -78,7 +78,7 @@
     <dependency>
       <groupId>nl.basjes.parse.httpdlog</groupId>
       <artifactId>httpdlog-pigloader</artifactId>
-      <version>2.2</version>
+      <version>2.4</version>
     </dependency>
     <dependency>
       <groupId>org.apache.pig</groupId>
