@@ -206,6 +206,8 @@ PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)
 
 BUG FIXES
 
+PIG-5112: Cleanup pig-template.xml (daijy)
+
 PIG-4821: Pig chararray field with special UTF-8 chars as part of tuple join key produces wrong results in Tez (rohini)
 
 PIG-4734: TOMAP schema inferring breaks some scripts in type checking for bincond (daijy)
